# agentic-technology-opportunity-discovery

./: .env.example  .gitignore  CLAUDE.local.md.example  CLAUDE.md  Makefile  README.md  _config.yml  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: README.md
.claude/commands/: commit.md  help.md
.claude/hooks/: block-secrets.py  verify-no-secrets.sh
.claude/skills/: README.md
_data/: navigation.yml
_pages/: about.md
assets/images/: AI Profile Pic.jpg:Zone.Identifier
src/agents/: __init__.py  base.py
src/domain/: __init__.py  core.py  document.py  run.py  search.py  signal.py  source.py
src/harness/: __init__.py  prompt.py
src/harness/context/: __init__.py
src/harness/hooks/: __init__.py
src/harness/memory/: __init__.py  base.py  episodic.py  reflection.py  semantic.py
src/harness/orchestration/: __init__.py
src/harness/state/: __init__.py  base.py
src/harness/tools/: __init__.py  document.py  parse.py  pdf.py  reflection.py  search.py  signal.py  skills.py  source.py
src/harness/tools/search_api/: __init__.py  arxiv.py
src/harness/workspace/: __init__.py
src/infra/llm/: __init__.py
src/infra/persistence/: __init__.py
src/infra/persistence/provider/: __init__.py  base.py  langfuse.py
src/infra/persistence/repo/: __init__.py  base.py  document.py  run.py  (+6 more)
src/orchestrator/: __init__.py  coordinator.py
src/tools/: llm.py
src/utils/: __init__.py  config.py  formatting.py  gen_api_cards.py  gen_tool_cards.py  interpreter.py  json.py  log.py  markdown.py  pdf.py  templating.py  tools.py
(+3 files in other folders)
