[project]
name = "project-name"
version = "0.1.0"
description = "An agentic AI project"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit a real database or external service",
    "unit: pure unit tests with no external dependencies",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["notebooks", "data", "logs"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH", "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
